crates/codegen/src/tests/snapshots/scope_for.snap
---
source: crates/codegen/src/tests.rs
assertion_line: 335
expression: "(test[1], res, res_opt)"
---
- "\nfn foo() {\n    let x: float = 1.0\n    for x: int = 1; x < 10; 1 {\n        x\n    }\n    x\n}\nfn main() { foo() }\n"
- "; ModuleID = 'main_mod'\nsource_filename = \"main_mod\"\n\ndefine void @foo() {\nentry:\n  %x1 = alloca i32, align 4\n  %x = alloca float, align 4\n  store float 1.000000e+00, float* %x, align 4\n  store i32 1, i32* %x1, align 4\n  br label %for.loop\n\nfor.loop:                                         ; preds = %for.loop, %entry\n  %x2 = load i32, i32* %x1, align 4\n  %x3 = load i32, i32* %x1, align 4\n  %slt.int = icmp slt i32 %x3, 10\n  %x4 = load i32, i32* %x1, align 4\n  %for.int.step = add i32 %x4, 1\n  store i32 %for.int.step, i32* %x1, align 4\n  %for.cond = icmp ne i1 %slt.int, false\n  br i1 %for.cond, label %for.loop, label %for.after\n\nfor.after:                                        ; preds = %for.loop\n  %x5 = load float, float* %x, align 4\n  ret void\n}\n\ndefine i32 @main() {\nentry:\n  call void @foo()\n  ret i32 0\n}\n"
- "; ModuleID = 'main_mod'\nsource_filename = \"main_mod\"\n\ndefine void @foo() {\nentry:\n  br label %for.loop\n\nfor.loop:                                         ; preds = %for.loop, %entry\n  %x3 = phi i32 [ %for.int.step, %for.loop ], [ 1, %entry ]\n  %slt.int = icmp slt i32 %x3, 10\n  %for.int.step = add i32 %x3, 1\n  br i1 %slt.int, label %for.loop, label %for.after\n\nfor.after:                                        ; preds = %for.loop\n  ret void\n}\n\ndefine i32 @main() {\nentry:\n  call void @foo()\n  ret i32 0\n}\n"

