crates/codegen/src/tests/snapshots/struct_basic.snap
---
source: crates/codegen/src/tests.rs
assertion_line: 439
expression: "(test[1], res, res_opt)"
---
- "\nstruct Foo {\n    let a: int\n    let b: bool\n    fn c(d: int) -> int { self.a + d }\n}\nfn main() {\n    let x: Foo\n    x.a\n    x.c(2)\n}\n"
- "; ModuleID = 'main'\nsource_filename = \"main\"\n\n%\"main::Foo\" = type { i32, i1 }\n\ndefine void @main() {\nentry:\n  %x = alloca %\"main::Foo\", align 8\n  store %\"main::Foo\" zeroinitializer, %\"main::Foo\"* %x, align 4\n  %x1 = load %\"main::Foo\", %\"main::Foo\"* %x, align 4\n  %struct.field.gep = getelementptr inbounds %\"main::Foo\", %\"main::Foo\"* %x, i32 0, i32 0\n  %struct.0 = load i32, i32* %struct.field.gep, align 4\n  %\"call__main::Foo_c~*main::Foo~int32~int32\" = call i32 @\"_main::Foo_c~*main::Foo~int32~int32\"(%\"main::Foo\"* %x, i32 2)\n  ret void\n}\n\ndefine i32 @\"_main::Foo_c~*main::Foo~int32~int32\"(%\"main::Foo\"* %self, i32 %d) {\nentry:\n  %d2 = alloca i32, align 4\n  %self1 = alloca %\"main::Foo\"*, align 8\n  store %\"main::Foo\"* %self, %\"main::Foo\"** %self1, align 8\n  store i32 %d, i32* %d2, align 4\n  %0 = load %\"main::Foo\"*, %\"main::Foo\"** %self1, align 8\n  %struct.field.gep = getelementptr inbounds %\"main::Foo\", %\"main::Foo\"* %0, i32 0, i32 0\n  %struct.0 = load i32, i32* %struct.field.gep, align 4\n  %d3 = load i32, i32* %d2, align 4\n  %add.int = add i32 %struct.0, %d3\n  ret i32 %add.int\n}\n"
- "; ModuleID = 'main'\nsource_filename = \"main\"\n\n%\"main::Foo\" = type { i32, i1 }\n\ndefine void @main() {\nentry:\n  %x = alloca %\"main::Foo\", align 8\n  store %\"main::Foo\" zeroinitializer, %\"main::Foo\"* %x, align 8\n  %\"call__main::Foo_c~*main::Foo~int32~int32\" = call i32 @\"_main::Foo_c~*main::Foo~int32~int32\"(%\"main::Foo\"* nonnull %x, i32 2)\n  ret void\n}\n\ndefine i32 @\"_main::Foo_c~*main::Foo~int32~int32\"(%\"main::Foo\"* %self, i32 %d) {\nentry:\n  %struct.field.gep = getelementptr inbounds %\"main::Foo\", %\"main::Foo\"* %self, i64 0, i32 0\n  %struct.0 = load i32, i32* %struct.field.gep, align 4\n  %add.int = add i32 %struct.0, %d\n  ret i32 %add.int\n}\n"

