crates/codegen/src/tests/snapshots/struct_selector.snap
---
source: crates/codegen/src/tests.rs
assertion_line: 436
expression: "(test[1], res, res_opt)"
---
- "\nfn returnStruct() -> Foo {\n    let a: Foo\n    a.a = 1\n    a\n}\nfn main() {\n    let x: Foo\n    x.a\n    let b: Bar\n    b.foo.a = returnStruct().a\n    b.foo.b()\n    b.foo.a\n}\nstruct Foo {\n    let a: int\n    fn b() {}\n}\nstruct Bar {\n    let foo: Foo\n}\n"
- "; ModuleID = 'main'\nsource_filename = \"main\"\n\n%Foo = type { i32 }\n%Bar = type { %Foo }\n\ndefine %Foo @\"_main::returnStruct~Foo\"() {\nentry:\n  %a = alloca %Foo, align 8\n  store %Foo zeroinitializer, %Foo* %a, align 4\n  %a1 = load %Foo, %Foo* %a, align 4\n  %struct.field.gep = getelementptr inbounds %Foo, %Foo* %a, i32 0, i32 0\n  %struct.0 = load i32, i32* %struct.field.gep, align 4\n  %a2 = load %Foo, %Foo* %a, align 4\n  %struct.field.gep3 = getelementptr inbounds %Foo, %Foo* %a, i32 0, i32 0\n  store i32 1, i32* %struct.field.gep3, align 4\n  %a4 = load %Foo, %Foo* %a, align 4\n  ret %Foo %a4\n}\n\ndefine void @main() {\nentry:\n  %x = alloca %Foo, align 8\n  store %Foo zeroinitializer, %Foo* %x, align 4\n  %x1 = load %Foo, %Foo* %x, align 4\n  %struct.field.gep = getelementptr inbounds %Foo, %Foo* %x, i32 0, i32 0\n  %struct.0 = load i32, i32* %struct.field.gep, align 4\n  %b = alloca %Bar, align 8\n  store %Bar zeroinitializer, %Bar* %b, align 4\n  %b2 = load %Bar, %Bar* %b, align 4\n  %struct.field.gep3 = getelementptr inbounds %Bar, %Bar* %b, i32 0, i32 0\n  %struct.04 = load %Foo, %Foo* %struct.field.gep3, align 4\n  %struct.field.gep5 = getelementptr inbounds %Foo, %Foo* %struct.field.gep3, i32 0, i32 0\n  %struct.06 = load i32, i32* %struct.field.gep5, align 4\n  %\"call__main::returnStruct~Foo\" = call %Foo @\"_main::returnStruct~Foo\"()\n  %\"_light_intern@1\" = alloca %Foo, align 8\n  store %Foo %\"call__main::returnStruct~Foo\", %Foo* %\"_light_intern@1\", align 4\n  %struct.field.gep7 = getelementptr inbounds %Foo, %Foo* %\"_light_intern@1\", i32 0, i32 0\n  %struct.08 = load i32, i32* %struct.field.gep7, align 4\n  %b9 = load %Bar, %Bar* %b, align 4\n  %struct.field.gep10 = getelementptr inbounds %Bar, %Bar* %b, i32 0, i32 0\n  %struct.011 = load %Foo, %Foo* %struct.field.gep10, align 4\n  %struct.field.gep12 = getelementptr inbounds %Foo, %Foo* %struct.field.gep10, i32 0, i32 0\n  store i32 %struct.08, i32* %struct.field.gep12, align 4\n  %b13 = load %Bar, %Bar* %b, align 4\n  %struct.field.gep14 = getelementptr inbounds %Bar, %Bar* %b, i32 0, i32 0\n  %struct.015 = load %Foo, %Foo* %struct.field.gep14, align 4\n  call void @\"_Foo_b~void\"(%Foo %struct.015)\n  %b16 = load %Bar, %Bar* %b, align 4\n  %struct.field.gep17 = getelementptr inbounds %Bar, %Bar* %b, i32 0, i32 0\n  %struct.018 = load %Foo, %Foo* %struct.field.gep17, align 4\n  %struct.field.gep19 = getelementptr inbounds %Foo, %Foo* %struct.field.gep17, i32 0, i32 0\n  %struct.020 = load i32, i32* %struct.field.gep19, align 4\n  ret void\n}\n\ndefine void @\"_Foo_b~void\"(%Foo %self) {\nentry:\n  %self1 = alloca %Foo, align 8\n  store %Foo %self, %Foo* %self1, align 4\n  ret void\n}\n"
- "; ModuleID = 'main'\nsource_filename = \"main\"\n\n%Foo = type { i32 }\n\ndefine %Foo @\"_main::returnStruct~Foo\"() {\nentry:\n  ret %Foo { i32 1 }\n}\n\ndefine void @main() {\nentry:\n  %\"call__main::returnStruct~Foo\" = call %Foo @\"_main::returnStruct~Foo\"()\n  call void @\"_Foo_b~void\"(%Foo %\"call__main::returnStruct~Foo\")\n  ret void\n}\n\ndefine void @\"_Foo_b~void\"(%Foo %self) {\nentry:\n  ret void\n}\n"

